--- a/.config_gs.yaml
+++ b/.config_gs.yaml
@@ -11,8 +11,8 @@ params:
       params:
         factor: 10
 
-    - module: ml_project.models.preprocessing
-      class: Normalization
+#    - module: ml_project.models.preprocessing
+#      class: Normalization
 
     - module: ml_project.models.feature_selection
       class: PrincipleComponentAnalysis
@@ -21,15 +21,19 @@ params:
       class: SVRegression
   param_grid:
     SVRegression__C:
-      - 0.05
+      - 0.0001
+      - 0.001
+      - 0.01
       - 0.1
-      - 0.15
-      - 0.2
+      - 1
     SVRegression__epsilon:
-      - 0.05
+      - 0.01
       - 0.1
-      - 0.5
-      - 1.0
+      - 1
+      - 10
+    SVRegression__kernel:
+      - 'poly'
+      - 'linear'
 
   cv:
     module: sklearn.model_selection
